--- a/src/styles/NavMenu.css
+++ b/src/styles/NavMenu.css
@@ -19,7 +19,11 @@
 }
 
 .nav-menu__dropdown > * {
+  display: block;
   margin-top: 9px;
+  text-decoration: inherit;
+  color: inherit;
+  font-weight: inherit;
 }
 
 .nav-menu__down-icon {
