--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@
   --space__std: 20px;
 
   --size__border: 3px;
+  --size__content-witdh: 500px;
 }
 
 
@@ -29,6 +30,14 @@
 
 *:focus {
   outline: none;
+}
+
+html,
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -52,19 +61,11 @@ h4 {
   display: inline;
 }
 
-.layout {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
-  padding: var(--space__std);
-}
-
 .gatsby-resp-image-wrapper {
   margin: 0 !important;
   /* border: var(--size__border) solid var(--color__text); */
-  box-shadow: 3px 3px var(--color__text);
+  box-shadow: 6px 6px var(--color__accent-alt);
+  border: 1px solid var(--color__text)
 
   /* border-right: 3px solid var(--color__accent);
   border-bottom: 3px solid var(--color__accent);
