--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,11 +1,9 @@
 .footer {
   width: 100%;
+  max-width: var(--size__content-witdh);
+  margin-top: var(--space__std);
   padding-top: var(--space__std);
   border-top: 1px solid var(--color__text-light);
   color: var(--color__text-light);
   font-size: smaller;
-}
-
-.footer {
-  max-width: var(--size__content-witdh);
 }
