--- a/src/styles/Technologies.css
+++ b/src/styles/Technologies.css
@@ -1,7 +1,11 @@
 .technologies svg {
   max-width: 200px;
+  box-shadow: 6px 6px var(--color__accent-alt);
+  border: 1px solid var(--color__text);
+  padding: var(--space__std)
 }
 
 .technologies__link {
   display: block;
+  max-width: 200px;
 }
