--- a/src/styles/NavSelected.css
+++ b/src/styles/NavSelected.css
@@ -1,30 +1,30 @@
-.highlight2 {
+.nav-selected {
   display: inline-flex;
   align-items: center;
   justify-content: flex-start;
 }
 
-.highlight2:hover {
+.nav-selected:hover {
   cursor: pointer;
 }
 
-.highlight2__left {
+.nav-selected__left {
   border-right: 9px solid var(--color__text);
   border-top: 36px solid transparent;
 }
 
-.highlight2__right {
+.nav-selected__right {
   border-left: 9px solid var(--color__text);
   border-bottom: 36px solid transparent;
 }
 
-.highlight2__main {
+.nav-selected__main {
   position: relative;
   background-color: var(--color__text);
   padding: 2px;
 }
 
-.highlight2__inner-left {
+.nav-selected__inner-left {
   position: absolute;
   bottom: 2px;
   left: -6px;
@@ -32,12 +32,12 @@
   border-top: 32px solid transparent;
 }
 
-.highlight2__inner-main {
+.nav-selected__inner-main {
   background-color: var(--color__accent);
   padding: 0 8px 0 4px;
 }
 
-.highlight2__inner-right {
+.nav-selected__inner-right {
   position: absolute;
   bottom: 2px;
   right: -6px;
@@ -45,13 +45,13 @@
   border-bottom: 32px solid transparent;
 }
 
-.highlight2__inner-main > * {
+.nav-selected__inner-main > * {
   margin: 0;
   font-style: italic;
   text-transform: uppercase;
 }
 
-.highlight2__icon {
+.nav-selected__icon {
   margin-left: 5px;
   margin-top: 7px;
 }
