--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -91,8 +91,9 @@ input, textArea, button, label {
 input, textArea {
   background-color: var(--color__input);
   border: 3px solid var(--color__border);
-  padding: 6px 12px;
-  /* box-shadow: inset 0 3px var(--color__shadow); */
+  padding: 6px;
+  box-shadow: none;
+  border-radius: 0;
 }
 
 textArea {
@@ -106,6 +107,10 @@ button,
 .val-errors,
 .val-errors > div:not(.val-errors > div:first-child) {
   margin-top: 12px;
+}
+
+label {
+  margin-left: 9px;
 }
 
 button {
