--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -88,6 +88,14 @@ input, textArea, button, label {
   font-size: inherit;
 }
 
+input[type=email],
+input[type_text],
+textArea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 input, textArea {
   background-color: var(--color__input);
   border: 3px solid var(--color__border);
@@ -98,7 +106,6 @@ input, textArea {
 
 textArea {
   max-width: var(--size__content-witdh);
-  /* min-width: var(--size__content-witdh); */
   min-height: 100px;
 }
 
@@ -110,7 +117,7 @@ button,
 }
 
 label {
-  margin-left: 9px;
+  margin-left: 3px;
 }
 
 button {
