--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@
   --color__error: #bd0404;
 
   --space__std: 20px;
+  --space__sml: 10px;
 
   --size__border: 3px;
   --size__content-witdh: 600px;
