--- a/src/styles/technologies.css
+++ b/src/styles/technologies.css
@@ -1,5 +1,6 @@
 .technologies svg {
   max-width: 200px;
+  min-height: 200px;
   box-shadow: 6px 6px var(--color__accent-alt);
   border: 1px solid var(--color__text);
   padding: var(--space__std)
