--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  max-width: var(--size__content-witdh);
+  max-width: var(--size__content-width);
   margin-top: var(--space__std);
   padding-top: var(--space__std);
   border-top: 1px solid var(--color__text-light);
