added images to projects page

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,4 +1,11 @@
-img {
+/* img {
   max-width: var(--size__content-width);
   margin-bottom: var(--space__std)
+} */
+
+.projects .gatsby-resp-image-wrapper {
+  margin: 0 !important;
+  box-shadow: 6px 6px var(--color__accent-alt);
+  border: 1px solid var(--color__text);
+  max-width: 400px !important;
 }
