--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,6 @@
 .about .gatsby-resp-image-wrapper {
   margin: 0 !important;
   box-shadow: 6px 6px var(--color__accent-alt);
-  border: 1px solid var(--color__text)
+  border: 1px solid var(--color__text);
+  max-width: 200px !important;
 }
