consolidated extra pages; started rewriting

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,4 @@
-.about .gatsby-resp-image-wrapper {
+.home .gatsby-resp-image-wrapper {
   margin: 0 !important;
   box-shadow: 6px 6px var(--color__accent-alt);
   border: 1px solid var(--color__text);
