line thickness for safari (again...)

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,9 +69,14 @@ h1 {
 h2 {
   font-size: 2rem;
   font-weight: bold;
-  text-decoration: underline var(--color__theme-1) solid /* 6px */;
+
+  /* text-decoration: underline var(--color__theme-1) solid 6px */
   /* thickness shorthand not yet supported in safari */
+  text-decoration-line: underline;
+  text-decoration-color: var(--color__theme-1);
+  text-decoration-style: solid;
   text-decoration-thickness: 6px;
+
   display: inline-block;
 }
 
