--- a/src/styles/contact-form.css
+++ b/src/styles/contact-form.css
@@ -1,9 +1,8 @@
-.contact-form > div {
+#contact-form > div {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
 }
 
-.contact-form__loading {
+#contact-form__loading {
   margin-top: 12px;
 }
