--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
+@import "site-container.css";
+@import "projects.css";
+@import "contact-form.css";
+@import "footer.css";
+
 :root {
   --color__background: #fdf6e3;
   --color__text: #073642;
@@ -14,6 +19,8 @@
 
   --size__border: 3px;
   --size__content-width: 600px;
+
+  --text-size__h1: 2.6rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,17 +45,9 @@
   box-sizing: border-box;
 }
 
-*:focus {
+/* *:focus {
   outline: none;
-}
-
-html,
-body,
-#___gatsby,
-#gatsby-focus-wrapper {
-  width: 100%;
-  height: 100%;
-}
+} */
 
 body {
   margin: 0;
@@ -174,4 +173,10 @@ ul li:before {
 
 strong {
   color: var(--color__text-bright);
+}
+
+img {
+  box-shadow: 6px 6px var(--color__theme-1);
+  border: 1px solid var(--color__text);
+  max-width: 200px !important;
 }
