--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,16 +38,32 @@
 @font-face {
   font-family: "iA Writer Duo";
   font-style: normal;
-  src: url(/fonts/ia-writer-duo.ttf) format("truetype");
+  src: url("../assets/fonts/ia-writer-duo/regular.woff2") format("woff2"),
+    url("../assets/fonts/ia-writer-duo/regular.woff") format("woff");
+}
+@font-face {
+  font-family: "iA Writer Duo";
+  font-weight: bold;
+  src: url("../assets/fonts/ia-writer-duo/bold.woff2") format("woff2"),
+    url("../assets/fonts/ia-writer-duo/bold.woff") format("woff");
+}
+@font-face {
+  font-family: "iA Writer Duo";
+  font-style: italic, oblique;
+  src: url("../assets/fonts/ia-writer-duo/italic.woff2") format("woff2"),
+    url("../assets/fonts/ia-writer-duo/italic.woff") format("woff");
+}
+@font-face {
+  font-family: "iA Writer Duo";
+  font-weight: bold;
+  font-style: italic, oblique;
+  src: url("../assets/fonts/ia-writer-duo/bold-italic.woff2") format("woff2"),
+    url("../assets/fonts/ia-writer-duo/bold-italic.woff") format("woff");
 }
 
 * {
   box-sizing: border-box;
 }
-
-/* *:focus {
-  outline: none;
-} */
 
 body {
   margin: 0;
@@ -172,6 +188,7 @@ ul li:before {
 }
 
 strong {
+  font-weight: bolder;
   color: var(--color__text-bright);
 }
 
