--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -5,7 +5,8 @@
   gap: 2rem;
 }
 
-/* .project-image {
-  box-shadow: 6px 6px var(--color__theme-1);
-  border: 1px solid var(--color__text);
-} */
+@media (max-width: 512px) {
+  .projects {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
