--- a/styles/index.css
+++ b/styles/index.css
@@ -37,7 +37,6 @@
 
 @font-face {
   font-family: "iA Writer Duo";
-  font-style: normal;
   src: url("../assets/fonts/ia-writer-duo/regular.woff2") format("woff2"),
     url("../assets/fonts/ia-writer-duo/regular.woff") format("woff");
 }
@@ -49,14 +48,27 @@
 }
 @font-face {
   font-family: "iA Writer Duo";
-  font-style: italic, oblique;
+  font-style: italic;
+  src: url("../assets/fonts/ia-writer-duo/italic.woff2") format("woff2"),
+    url("../assets/fonts/ia-writer-duo/italic.woff") format("woff");
+}
+@font-face {
+  font-family: "iA Writer Duo";
+  font-style: oblique;
   src: url("../assets/fonts/ia-writer-duo/italic.woff2") format("woff2"),
     url("../assets/fonts/ia-writer-duo/italic.woff") format("woff");
 }
 @font-face {
   font-family: "iA Writer Duo";
   font-weight: bold;
-  font-style: italic, oblique;
+  font-style: italic;
+  src: url("../assets/fonts/ia-writer-duo/bold-italic.woff2") format("woff2"),
+    url("../assets/fonts/ia-writer-duo/bold-italic.woff") format("woff");
+}
+@font-face {
+  font-family: "iA Writer Duo";
+  font-weight: bold;
+  font-style: oblique;
   src: url("../assets/fonts/ia-writer-duo/bold-italic.woff2") format("woff2"),
     url("../assets/fonts/ia-writer-duo/bold-italic.woff") format("woff");
 }
