--- a/styles/index.css
+++ b/styles/index.css
@@ -207,5 +207,6 @@ strong {
 img {
   box-shadow: 6px 6px var(--color__theme-1);
   border: 1px solid var(--color__text);
-  max-width: 200px !important;
+  width: 100%;
+  max-width: 200px;
 }
