--- a/styles/site-container.css
+++ b/styles/site-container.css
@@ -1,7 +1,7 @@
 #site-container {
   min-height: 100dvh;
   width: 100vw;
-  padding: var(--space__std);
+  padding: var(--space);
   display: flex;
   justify-content: center;
 }
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: var(--size__content-width);
+  max-width: var(--max-content-width);
 }
 
 header,
