--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 footer {
   margin-top: var(--space__lg);
   padding-top: var(--space);
-  border-top: 1px solid var(--color__text-light);
+  border-top: var(--space__xxs) solid var(--color__text-light);
   color: var(--color__text-light);
   font-size: smaller;
 }
