--- a/styles/index.css
+++ b/styles/index.css
@@ -177,10 +177,6 @@ img {
   max-width: 200px;
 }
 
-#know-more-gif {
+#know-more-gif.hidden {
   display: none;
-}
-
-#know-more-gif.visible {
-  display: block;
 }
