another transition change

--- a/styles/site-container.css
+++ b/styles/site-container.css
@@ -5,15 +5,14 @@
   display: flex;
   justify-content: center;
   opacity: 1;
-  transition: all 0.15s ease-in-out;
+  transition: all 0.2s;
   scale: 1;
   filter: none;
 }
 
 #site-container.before-load {
   opacity: 0;
-  padding-top: calc(var(--space) * 0.9);
-  filter: blur(0.4rem);
+  scale: 100.5%;
 }
 
 #content {
