--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,4 @@
-#projects {
+.projects {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-auto-rows: auto;
@@ -10,7 +10,7 @@
 }
 
 @media (max-width: 476px) {
-  #projects {
+  .projects {
     grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: var(--space);
   }
